--- a/src/main/java/fxml/Facturacion/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Facturacion/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -104,39 +104,45 @@
                         </AnchorPane>
                      </content>
                   </TitledPane>
+                  <Label layoutX="12.0" layoutY="12.0" text="Tipo salida">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <ComboBox layoutX="90.0" layoutY="8.0" prefWidth="150.0" />
+                  <Label layoutX="268.0" layoutY="13.0" text="Descripción">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="pedido_buscar1" layoutX="348.0" layoutY="7.0" prefHeight="25.0" prefWidth="380.0" />
                </children>
             </AnchorPane>
-            <TitledPane animated="false" collapsible="false" layoutX="1.0" layoutY="61.0" prefHeight="246.0" prefWidth="737.0" text="Informacion del envio">
+            <TitledPane animated="false" collapsible="false" layoutX="1.0" layoutY="61.0" prefHeight="192.0" prefWidth="737.0" text="Informacion del envio">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="735.0">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="185.0" prefWidth="735.0">
                      <children>
-                        <TableView fx:id="tabla_productos" layoutX="14.0" layoutY="65.0" prefHeight="147.0" prefWidth="539.0">
+                        <TableView fx:id="tabla_productos" layoutX="14.0" layoutY="32.0" prefHeight="123.0" prefWidth="539.0">
                           <columns>
                             <TableColumn fx:id="envio_cod_producto" prefWidth="132.0" text="Código" />
                             <TableColumn fx:id="envio_nombre_producto" minWidth="0.0" prefWidth="135.0" text="Nombre" />
                               <TableColumn fx:id="envio_desc_producto" minWidth="0.0" prefWidth="136.0" text="Descripcion" />
                           </columns>
                         </TableView>
-                        <Label layoutX="14.0" layoutY="37.0" text="Productos">
+                        <Label layoutX="15.0" text="Productos">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <Button fx:id="buscar_envio_button" layoutX="408.0" layoutY="14.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
+                        <Button fx:id="buscar_envio_button" layoutX="570.0" layoutY="10.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <Label layoutX="575.0" layoutY="14.0" text="Código Envio" />
-                        <Label layoutX="571.0" layoutY="73.0" text="Código Pedido" />
-                        <TextField fx:id="envio_buscar" layoutX="572.0" layoutY="37.0" />
-                        <TextField fx:id="pedido_buscar" layoutX="572.0" layoutY="98.0" />
-                        <Label layoutX="571.0" layoutY="139.0" text="Tipo de salida">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <ComboBox layoutX="571.0" layoutY="170.0" prefWidth="150.0" />
+                        <Label layoutX="571.0" layoutY="45.0" text="Código Envio" />
+                        <Label layoutX="567.0" layoutY="100.0" text="Código Pedido" />
+                        <TextField fx:id="envio_buscar" layoutX="569.0" layoutY="69.0" />
+                        <TextField fx:id="pedido_buscar" layoutX="568.0" layoutY="125.0" />
                      </children>
                   </AnchorPane>
                </content>
