--- a/src/main/java/fxml/General/Auditoria/Auditoria.fxml
+++ b/src/main/java/fxml/General/Auditoria/Auditoria.fxml
@@ -100,6 +100,9 @@
                   <TableColumn fx:id="ColumnaAccion" prefWidth="110.0" text="Acción" />
                   <TableColumn fx:id="ColumnaDescripcion" minWidth="0.0" prefWidth="179.0" text="Descripción" />
               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
          </children>
       </Pane>
