--- a/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
+++ b/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
@@ -36,6 +36,9 @@
                   <TableColumn fx:id="almacen_nombre" prefWidth="137.0" text="Nombre" />
                   <TableColumn fx:id="almacen_codigo" prefWidth="86.0" text="Codigo" />
                </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
             <TextField fx:id="codigo_almacen_buscar" layoutX="118.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
             <Label layoutX="17.0" layoutY="70.0" prefHeight="21.0" prefWidth="114.0" text="Nombre">
