--- a/src/main/java/fxml/Facturacion/GuiasDeRemision/GuiasDeRemision.fxml
+++ b/src/main/java/fxml/Facturacion/GuiasDeRemision/GuiasDeRemision.fxml
@@ -21,13 +21,13 @@
       <AnchorPane layoutY="2.0" prefHeight="572.0" prefWidth="250.0">
          <children>
             <TextField fx:id="cod_pedido_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
-            <Button layoutX="136.0" layoutY="144.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
+            <Button layoutX="136.0" layoutY="209.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
-            <TableView fx:id="tabla_envios" layoutX="13.0" layoutY="198.0" prefHeight="322.0" prefWidth="226.0">
+            <TableView fx:id="tabla_pedido" layoutX="13.0" layoutY="252.0" prefHeight="268.0" prefWidth="226.0">
                <columns>
                   <TableColumn fx:id="columna_cliente" prefWidth="51.0" text="Cliente" />
-                  <TableColumn fx:id="columna_envio" prefWidth="79.0" text="Envio" />
-                  <TableColumn fx:id="columna_pedido" prefWidth="95.0" text="Pedido" />
+                  <TableColumn fx:id="columna_codigo_pedido" prefWidth="79.0" text="Cod.Pedido" />
+                  <TableColumn fx:id="columna_pedido_fecha" prefWidth="95.0" text="Fecha" />
                </columns>
             </TableView>
             <TextField fx:id="cliente_pedido_buscar" layoutX="119.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
@@ -55,6 +55,18 @@
                   </ImageView>
                </children>
             </Pane>
+            <DatePicker fx:id="fecha_inicio_buscar" layoutX="117.0" layoutY="137.0" prefHeight="25.0" prefWidth="114.0" />
+            <DatePicker fx:id="fecha_fin_buscar" layoutX="117.0" layoutY="175.0" prefHeight="25.0" prefWidth="114.0" />
+            <Label layoutX="20.0" layoutY="140.0" prefHeight="21.0" prefWidth="114.0" text="Fecha de inicio">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="20.0" layoutY="177.0" prefHeight="21.0" prefWidth="114.0" text="Fecha de fin">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
             <Button layoutX="136.0" layoutY="533.0" mnemonicParsing="false" onAction="#visualizar_pedido" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
          </children>
       </AnchorPane>
@@ -178,12 +190,12 @@
                                        <children>
                                           <TableView fx:id="TablaProductos" layoutX="14.0" layoutY="29.0" prefHeight="303.0" prefWidth="675.0">
                                              <columns>
-                                                <TableColumn fx:id="codProdColumn" prefWidth="89.0" resizable="false" text="Código" />
-                                                <TableColumn fx:id="nombreProdColumn" prefWidth="172.0" resizable="false" text="Nombre" />
-                                                <TableColumn fx:id="fleteProdColumn" prefWidth="138.0" resizable="false" text="Descripción" />
-                                                <TableColumn fx:id="cantProdColumn" prefWidth="72.0" resizable="false" text="Cant." />
-                                                <TableColumn fx:id="precioUnitarioColumn" prefWidth="66.0" resizable="false" text="Peso" />
-                                                <TableColumn fx:id="subTotalProdColumna" prefWidth="136.0" resizable="false" text="Unidad de medida" />
+                                                <TableColumn fx:id="columna_codigo" prefWidth="89.0" resizable="false" text="Código" />
+                                                <TableColumn fx:id="columna_nombre" prefWidth="172.0" resizable="false" text="Nombre" />
+                                                <TableColumn fx:id="columna_descripcion" prefWidth="138.0" resizable="false" text="Descripción" />
+                                                <TableColumn fx:id="columna_cantidad" prefWidth="72.0" resizable="false" text="Cant." />
+                                                <TableColumn fx:id="columna_peso" prefWidth="66.0" resizable="false" text="Peso" />
+                                                <TableColumn fx:id="columna_unidad_medida" prefWidth="136.0" resizable="false" text="Unidad de medida" />
                                              </columns>
                                              <columnResizePolicy>
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
