--- a/src/main/java/fxml/RecursosHumanos/Roles/Roles.fxml
+++ b/src/main/java/fxml/RecursosHumanos/Roles/Roles.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -19,7 +24,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="574.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.RolesController">
+<AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="574.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.RolesController">
    <children>
       <SplitPane dividerPositions="0.37166324435318276" layoutX="-4.0" layoutY="-4.0" prefHeight="578.0" prefWidth="976.0">
          <items>
@@ -45,7 +50,6 @@
                       <RowConstraints maxHeight="75.0" minHeight="4.0" prefHeight="12.0" vgrow="SOMETIMES" />
                       <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="138.0" minHeight="9.0" prefHeight="63.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="67.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label prefHeight="34.0" prefWidth="139.0" text="Búsqueda" GridPane.columnIndex="1">
@@ -64,13 +68,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label prefHeight="35.0" prefWidth="244.0" text="Estado:" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
                         <TextField fx:id="BusquedaNombre" prefHeight="27.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                        <ComboBox fx:id="BusquedaEstado" prefHeight="25.0" prefWidth="173.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                         <ComboBox fx:id="BusquedaRol" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
@@ -97,7 +95,6 @@
                      <columns>
                         <TableColumn fx:id="ColumnaCodigo" minWidth="61.0" prefWidth="72.0" text="Codigo" />
                         <TableColumn fx:id="ColumnaNombre" minWidth="75" prefWidth="100.0" text="Nombre" />
-                        <TableColumn fx:id="ColumnaEstado" minWidth="73.0" prefWidth="73.0" text="Estado" />
                         <TableColumn fx:id="ColumnaDescipcion" prefWidth="112.0" text="Descripcion" />
                      </columns>
                   </TableView>
