--- a/src/main/java/fxml/RecursosHumanos/Usuarios/Usuarios.fxml
+++ b/src/main/java/fxml/RecursosHumanos/Usuarios/Usuarios.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -18,7 +23,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="574.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.UsuariosController">
+<AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="574.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.UsuariosController">
    <children>
       <SplitPane dividerPositions="0.37166324435318276" layoutX="-4.0" layoutY="-4.0" prefHeight="578.0" prefWidth="976.0">
          <items>
@@ -46,7 +51,6 @@
                         <RowConstraints maxHeight="138.0" minHeight="9.0" prefHeight="45.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label prefHeight="34.0" prefWidth="139.0" text="Búsqueda" GridPane.columnIndex="1">
@@ -70,12 +74,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label prefHeight="35.0" prefWidth="244.0" text="Estado:" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <Label prefHeight="35.0" prefWidth="244.0" text="Codigo Rol:" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                        <Label prefHeight="35.0" prefWidth="244.0" text="Codigo Rol:" GridPane.columnIndex="1" GridPane.rowIndex="5">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -83,8 +82,7 @@
                         <TextField fx:id="BusquedaCodigo" prefHeight="23.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                         <TextField fx:id="BusquedaNombre" prefHeight="27.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                         <TextField fx:id="BusquedaApellido" prefHeight="27.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                        <ComboBox fx:id="BusquedaEstado" prefHeight="25.0" prefWidth="173.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                        <ComboBox fx:id="BusquedaRol" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                        <ComboBox fx:id="BusquedaRol" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                   <GridPane maxHeight="1.7976931348623157E308" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
@@ -111,7 +109,6 @@
                         <TableColumn fx:id="ColumnaCodigo" minWidth="62.0" prefWidth="73.0" text="Codigo" />
                         <TableColumn fx:id="ColumnaNombre" minWidth="75" prefWidth="109.0" text="Nombre" />
                         <TableColumn fx:id="ColumnaApellido" minWidth="75" prefWidth="94.0" text="Apellido" />
-                        <TableColumn fx:id="ColumnaEstado" minWidth="75" prefWidth="87.0" text="Estado" />
                         <TableColumn fx:id="ColumnaRol" minWidth="75" prefWidth="90.0" text="Codigo Rol" />
                      </columns>
                   </TableView>
@@ -129,11 +126,7 @@
                   </GridPane>
                </children>
             </GridPane>
-<<<<<<< HEAD
-            <GridPane fx:id="DetalleUsuario">
-=======
             <GridPane fx:id="formulario_grid">
->>>>>>> 40149d707005e3c5fd6852136235e7f92fd729dd
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="15.0" />
                 <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="582.0" />
