--- a/src/main/java/fxml/Despachos/NotaDeCredito/NotaDeCredito.fxml
+++ b/src/main/java/fxml/Despachos/NotaDeCredito/NotaDeCredito.fxml
@@ -26,9 +26,9 @@
                   <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
                   <TableView fx:id="tabla_notas_cred" layoutX="13.0" layoutY="219.0" prefHeight="301.0" prefWidth="226.0">
                      <columns>
-                        <TableColumn fx:id="columna_cliente" prefWidth="77.0" text="Ord. Entrada" />
+                        <TableColumn fx:id="columna_cliente" prefWidth="77.0" text="Codigo" />
                         <TableColumn fx:id="columna_envio" prefWidth="63.0" text="Cliente" />
-                        <TableColumn fx:id="columna_pedido" prefWidth="85.0" text="Monto" />
+                        <TableColumn fx:id="columna_pedido" prefWidth="85.0" text="Ord. Entrada" />
                      </columns>
                       <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -136,8 +136,8 @@
                            <content>
                               <AnchorPane prefHeight="226.0" prefWidth="175.0">
                                  <children>
-                                    <Button layoutX="71.0" layoutY="31.799999999999997" mnemonicParsing="false" onAction="#agregar_producto" prefHeight="40.0" prefWidth="40.0" text="A" AnchorPane.topAnchor="31.799999999999997" />
-                                    <Button layoutX="71.0" layoutY="155.0" mnemonicParsing="false" onAction="#eliminar_producto" prefHeight="40.0" prefWidth="40.0" text="X" />
+                                    <Button fx:id="bttn_agregar_prod" layoutX="71.0" layoutY="31.799999999999997" mnemonicParsing="false" onAction="#agregar_producto" prefHeight="40.0" prefWidth="40.0" text="A" AnchorPane.topAnchor="31.799999999999997" />
+                                    <Button fx:id="bttn_eliminar_prod" layoutX="71.0" layoutY="155.0" mnemonicParsing="false" onAction="#eliminar_producto" prefHeight="40.0" prefWidth="40.0" text="X" />
                                     <Label layoutX="42.0" layoutY="100.0" text="Agregar Producto" />
                                     <Label layoutX="43.0" layoutY="195.0" text="Eliminar Producto" />
                                  </children>
@@ -176,7 +176,7 @@
                                        </font>
                                     </Label>
                                     <ComboBox fx:id="ordenes_entrada_combobox" layoutX="156.0" layoutY="85.0" prefWidth="150.0" />
-                                    <Button layoutX="601.0" layoutY="12.0" mnemonicParsing="false" onAction="#agregarCliente" text="+" />
+                                    <Button fx:id="boton_agregar_cliente" layoutX="601.0" layoutY="12.0" mnemonicParsing="false" onAction="#agregarCliente" text="+" />
                                  </children>
                               </AnchorPane>
                            </children>
