--- a/src/main/java/fxml/AgregarInstanciaProducto.fxml
+++ b/src/main/java/fxml/AgregarInstanciaProducto.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -9,16 +10,16 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="369.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="369.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="24.0" layoutY="12.0" prefHeight="99.0" prefWidth="502.0" AnchorPane.bottomAnchor="289.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="12.0">
+      <AnchorPane layoutX="24.0" layoutY="12.0" prefHeight="114.0" prefWidth="502.0" AnchorPane.bottomAnchor="259.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="12.0">
          <children>
-            <Label layoutX="14.0" layoutY="42.0" text="Código:">
+            <Label layoutX="14.0" layoutY="47.0" text="Código:">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="69.0" text="Nombre:">
+            <Label layoutX="14.0" layoutY="83.0" text="Nombre:">
                <font>
                   <Font size="14.0" />
                </font>
@@ -28,12 +29,18 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="BuscarCodigo" layoutX="100.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
-            <TextField fx:id="BuscarNombre" layoutX="100.0" layoutY="67.0" prefHeight="20.0" prefWidth="111.0" />
+            <TextField fx:id="BuscarCodigo" layoutX="100.0" layoutY="45.0" prefHeight="20.0" prefWidth="111.0" />
+            <TextField fx:id="BuscarNombre" layoutX="100.0" layoutY="80.0" prefHeight="20.0" prefWidth="111.0" />
             <Line endX="400.0" layoutX="100.0" layoutY="29.0" startX="-100.0" />
+            <Label layoutX="262.0" layoutY="47.0" text="Tipo">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="combobox_tipo" layoutX="351.0" layoutY="45.0" prefWidth="150.0" />
          </children>
       </AnchorPane>
-      <Button fx:id="buscarProductoButtom" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+      <Button fx:id="buscarProductoButtom" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" onAction="#buscar_producto" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
       <Button fx:id="agregarProductoButtom" layoutX="458.0" layoutY="360.0" mnemonicParsing="false" onAction="#agregarProducto" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
       <TableView fx:id="tabla_producto" layoutX="24.0" layoutY="167.0" prefHeight="183.0" prefWidth="496.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="167.0">
          <columns>
