--- a/src/main/java/fxml/ContenidoPrincipal.fxml
+++ b/src/main/java/fxml/ContenidoPrincipal.fxml
@@ -49,12 +49,8 @@
                         </ImageView>
                      </children>
                   </AnchorPane>
+                  <Separator orientation="VERTICAL" prefHeight="80.0" />
                   <AnchorPane fx:id="contenedor_botones_acciones" prefHeight="100.0" />
-                  <AnchorPane prefHeight="81.0" prefWidth="900.0">
-                     <children>
-                        <Separator layoutX="1.0" layoutY="9.0" orientation="VERTICAL" prefHeight="80.0" />
-                     </children>
-                  </AnchorPane>
                </children>
             </HBox>
             <HBox prefHeight="572.0" prefWidth="1200.0">
