--- a/src/main/java/fxml/AgregarEnviosOrdenSalida.fxml
+++ b/src/main/java/fxml/AgregarEnviosOrdenSalida.fxml
@@ -22,19 +22,19 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <AnchorPane layoutX="24.0" layoutY="12.0" prefHeight="99.0" prefWidth="502.0" AnchorPane.bottomAnchor="289.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="12.0">
+      <AnchorPane layoutX="24.0" layoutY="12.0" prefHeight="117.0" prefWidth="502.0" AnchorPane.bottomAnchor="240.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="12.0">
          <children>
             <Label layoutX="14.0" layoutY="42.0" text="Cliente">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="69.0" text="Cod.Envio">
+            <Label layoutX="14.0" layoutY="83.0" text="Cod.Envio">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="222.0" layoutY="42.0" text="Cod. Pedido">
+            <Label layoutX="230.0" layoutY="42.0" text="Cod. Pedido">
                <font>
                   <Font size="14.0" />
                </font>
@@ -45,12 +45,12 @@
                </font>
             </Label>
             <TextField fx:id="buscar_cliente" layoutX="100.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
-            <TextField fx:id="buscar_nombre" layoutX="100.0" layoutY="67.0" prefHeight="20.0" prefWidth="111.0" />
+            <TextField fx:id="buscar_envio" layoutX="100.0" layoutY="80.0" prefHeight="20.0" prefWidth="111.0" />
             <Line endX="400.0" layoutX="100.0" layoutY="29.0" startX="-100.0" />
             <TextField fx:id="buscar_pedido" layoutX="350.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
          </children>
       </AnchorPane>
-      <Button fx:id="buscarProductoButtom" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
-      <Button fx:id="boton_agregar_envio" layoutX="458.0" layoutY="360.0" mnemonicParsing="false" onAction="#agregar_envio" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
+      <Button fx:id="buscarProductoButtom" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" onAction="#buscar_envio" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+      <Button fx:id="boton_agregar_envio" layoutX="458.0" layoutY="332.0" mnemonicParsing="false" onAction="#agregar_envio" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
    </children>
 </AnchorPane>
